--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   geolocator: ^9.0.2
   permission_handler: ^11.0.1
   cached_network_image: ^3.3.0
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +66,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/splash1.png
+    - assets/splash1.json
+    - assets/loading.json
+    - assets/sunny_weather.png
+    - assets/rain_weather.png
+    - assets/plants/ # This includes all files in the plants folder
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
