--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   permission_handler: ^11.0.1
   cached_network_image: ^3.3.0
   lottie: ^3.1.2
+  flutter_dotenv: ^5.1.0 
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +68,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - .env
     - assets/splash1.json
     - assets/loading.json
     - assets/sunny_weather.png
