--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,12 +73,16 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/splash1.json
+    - assets/Success.json
     - assets/loading.json
     - assets/google_icon.png
     - assets/sunny_weather.png
     - assets/rain_weather.png
     - assets/plants/
-    - assets/pots/ # This includes all files in the pots folder
+    - assets/pots/
+    - assets/gardenTools/
+    - assets/soil/
+     # This includes all files in the pots folder
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
