--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cloud_firestore: ^5.0.0   # Or latest version
   google_sign_in: ^6.2.1    
   provider: ^6.1.2
+  intl: ^0.19.0
 
 
 dev_dependencies:
