--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ flutter:
     - assets/pots/
     - assets/gardenTools/
     - assets/soil/
+    - assets/settings_10208910.png
      # This includes all files in the pots folder
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
